--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Impact Celestial Studio</title>
 <link rel="stylesheet" href="style.css">
+<link rel="canonical" href="https://dedexoyox.github.io/">
 </head>
 <body>
 
@@ -91,3 +92,4 @@ function toggleMenu(){
 
 </body>
 </html>
+
